delete python dotenv

--- a/notebooks/check_api.ipynb
+++ b/notebooks/check_api.ipynb
@@ -10,7 +10,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "85ec0861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting python-dotenv\n",
+      "  Using cached python_dotenv-0.21.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: python-dotenv\n",
+      "Successfully installed python-dotenv-0.21.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install python-dotenv\n",
+    "import dotenv\n",
+    "%load_ext dotenv\n",
+    "%dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c7aca39f",
    "metadata": {},
    "outputs": [],
@@ -24,27 +48,6 @@
     "import sys\n",
     "\n",
     "from dotenv import load_dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c4f9119d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "load_dotenv()"
    ]
   },
   {
@@ -67,16 +70,16 @@
       "    feelslikemin  =  -6\n",
       "    feelslike  =  -3.3\n",
       "    dew  =  -0.3\n",
-      "    humidity  =  92.1\n",
+      "    humidity  =  92\n",
       "    precip  =  0\n",
       "    precipprob  =  0\n",
       "    precipcover  =  0\n",
       "    preciptype  =  \n",
       "    snow  =  0\n",
       "    snowdepth  =  1.7\n",
-      "    windgust  =  33.5\n",
+      "    windgust  =  35.6\n",
       "    windspeed  =  27.4\n",
-      "    winddir  =  119.6\n",
+      "    winddir  =  119.5\n",
       "    sealevelpressure  =  1026\n",
       "    cloudcover  =  98.5\n",
       "    visibility  =  9\n",
@@ -94,21 +97,21 @@
       "Weather in  Warszawa, Woj. Mazowieckie, Polska  on  2022-12-05\n",
       "    temp  =  0.4\n",
       "    feelslikemax  =  -1.8\n",
-      "    feelslikemin  =  -4.3\n",
-      "    feelslike  =  -3\n",
-      "    dew  =  -0.9\n",
-      "    humidity  =  91\n",
-      "    precip  =  0.1\n",
+      "    feelslikemin  =  -4.4\n",
+      "    feelslike  =  -3.1\n",
+      "    dew  =  -1\n",
+      "    humidity  =  90.2\n",
+      "    precip  =  0\n",
       "    precipprob  =  42.9\n",
-      "    precipcover  =  4.17\n",
-      "    preciptype  =  rain,snow\n",
+      "    precipcover  =  0\n",
+      "    preciptype  =  \n",
       "    snow  =  0\n",
       "    snowdepth  =  0.5\n",
-      "    windgust  =  34.9\n",
-      "    windspeed  =  13.3\n",
-      "    winddir  =  121.6\n",
-      "    sealevelpressure  =  1023.2\n",
-      "    cloudcover  =  98.9\n",
+      "    windgust  =  35.6\n",
+      "    windspeed  =  14.8\n",
+      "    winddir  =  125\n",
+      "    sealevelpressure  =  1023.3\n",
+      "    cloudcover  =  99.7\n",
       "    visibility  =  24.1\n",
       "    solarradiation  =  41.2\n",
       "    solarenergy  =  3.6\n",
@@ -232,14 +235,6 @@
     "\n",
     "print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c9303cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
